--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="nav nav_top">
             <div class="logo">
-                <a href="index5.html"><img src="amazon.png" width="150">
+                <a href="index.html"><img src="amazon.png" width="150">
             </div>
             <div class="nav_side">
                 <a href="about.html">About Us</a>
