--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <hr>
         <footer>
             <div class="footer_logo">
-                <a href="index5.html"><img src="amazon.png" width="150"></a>
+                <a href="index.html"><img src="amazon.png" width="150"></a>
             </div>
             <div class="pages">
                 <h3>Pages</h3>
