--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="main">
             <div class="main_content">
                 <h2>Innovation Is The Only Way<br><br>
-                <span>We innovate by starting with the customer and working backwards. That becomes the touchstone for how we invent. Creativity is thinking up new things but Innovation is doing new things.<br>Innovation is the ability to see changes as an opportunity-not a threat.</span>
+                <span>We innovate by starting with the customer and working backwards. That becomes the touchstone for how we invent. Creativity is thinking up new things but Innovation is doing new things.<br>Innovation is the ability to see changes as an opportunity-not a threat.</span><br><br>
                 </h2>
                 <!--<div class="btn">
                     <a href="service.html">Book Now</a>
